--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
-  "name": "terminal",
+  "name": "covid19-mapcli",
   "version": "1.0.0",
-  "description": "",
-  "bin": "index.js",
+  "description": "Cli map covid19 cases",
+  "bin": {
+    "covid19-mapcli": "index.js"
+  },
   "keywords": [],
   "author": "Juani Viola",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "blessed": "^0.1.81",
     "blessed-contrib": "^4.8.19",
     "request": "^2.88.2",
     "request-promise": "^4.2.5"
-  }
+  },
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/juaniviola/covid19-map-cli.git"
+  },
+  "bugs": {
+    "url": "https://github.com/juaniviola/covid19-map-cli/issues"
+  },
+  "homepage": "https://github.com/juaniviola/covid19-map-cli#readme"
 }
